--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,32 +1,7 @@
-body{
-    margin:0px;
-}
-span{
-    color:cornsilk;
-    margin-right: 30px;
-}
-img{
-    border-radius: 50%;
-}
-table{
-    width: 100%;
-    text-align: center;
-}
-#main-left{
-    width:40%;
-    float:left;
-    text-align: center;
-    margin-top: 40px;
-}
-#main-right{
-    width: 60%;
-    float:right;
-    height: 400px;
-    text-align: left;
-}
 #header{
     background-color: black;
     height:70px;
+    width: 100%;
 }
 #brand {
     width: 40%;
@@ -36,20 +11,89 @@ table{
     color:white;
 }
 #menu{
-    text-align: center;
-    width: 60%;
-    float: right;
+    margin-left: 30%;
+   
+    float: left;
     height: 70px;
     line-height: 70px;
 }
-#list-of-images{
-    margin-top: 100px;
-}
-#footer{
-    background-color: black;
+.title{
     text-align: center;
-    padding: 50px;
-    margin-top: 100px;
+    
+    height: 40px;
+    width: 140px;
+   
+    
+margin-top: 15px;
+}
+
+.btn{
+    height: 40px;
+    width: 140px;
     color: white;
-    height: 250px;
+}
+.btn:hover{
+    color: rgb(11, 11, 11);
+    background-color: white;
+}
+
+
+.ghost {
+	width: 6vmin;
+	height: 10vmin;
+	background-color: var(--white);
+	background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
+	background-image: radial-gradient(ellipse at 35% 40%, #000 8%, transparent 0%),
+		radial-gradient(ellipse at 65% 40%, #000 8%, transparent 0%),
+		radial-gradient(ellipse at 50% 60%, #000 8%, transparent 0%);
+	border-radius: 100% / 70% 70% 0% 0%;
+	transform: translateX(100em) rotateZ(-90deg);
+	position: relative;
+	opacity: 0.9;
+	mix-blend-mode: exclusion;
+	animation: ghostMove 6s ease-out infinite;
+}
+@keyframes ghostMove {
+	0% {
+		transform: translateX(30em) rotateZ(-90deg);
+	}
+	100% {
+		transform: translateX(-35em) rotateZ(-90deg);
+	}
+}
+.ghost div {
+	position: absolute;
+	width: 20%;
+	background-color: var(--white);
+}
+.ghost div:nth-of-type(1) {
+	height: 7vmin;
+	left: 0;
+	bottom: -6vmin;
+	border-radius: 100% / 0% 0% 50% 50%;
+}
+.ghost div:nth-of-type(2),
+.ghost div:nth-of-type(4) {
+	height: 4vmin;
+	left: 20%;
+	bottom: -3vmin;
+	border-radius: 100% / 50% 50% 0% 0%;
+	background-color: transparent;
+}
+.ghost div:nth-of-type(3) {
+	height: 4vmin;
+	left: 40%;
+	bottom: -3.95vmin;
+	border-radius: 100% / 0% 0% 60% 60%;
+	background-color: var(--white);
+}
+.ghost div:nth-of-type(4) {
+	left: 60%;
+}
+.ghost div:nth-of-type(5) {
+	height: 3vmin;
+	left: 80%;
+	bottom: -2.9vmin;
+	border-radius: 100% / 0% 0% 70% 70%;
+	background-color: var(--white);
 }
